Make Element#innerText to not collapse white space around inline-block

This patch makes |Element#innerText| not to collapse white space around inline-
block for improving interop.

Note: The spec doesn't explicitly mention about this.

Changes of AX test expectations added missing space after <input>.

TBR=dmazzoni@chromium.org

Bug: 890020
Cq-Include-Trybots: luci.chromium.try:linux_layout_tests_layout_ng
Change-Id: I74a47fd5ba3a22ff17d9c36838a81b4277ac47cc
Reviewed-on: https://chromium-review.googlesource.com/c/1250825
Reviewed-by: Xiaocheng Hu <xiaochengh@chromium.org>
Commit-Queue: Yoshifumi Inoue <yosin@chromium.org>
Cr-Commit-Position: refs/heads/master@{#596485}
Former-commit-id: fdb60d4f8393e380949500b0cbf699aa4530b265